# plugin_pattern

./: README.md
app/: Cargo.toml
app/src/: main.rs
counter_dynamic_lib/: Cargo.toml
counter_dynamic_lib/src/: lib.rs
counter_static_lib/: Cargo.toml
counter_static_lib/src/: lib.rs
counter_static_lib/src/errors/: errors.rs
